t2Comp/T2CC2-master/src/LinguagemLMGParser.java
// Generated from .\LinguagemLMG.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LinguagemLMGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, IDENT=64, CADEIA=65, NUM=66, CaracteresIgnorados=67, 
		Comentarios=68;
	public static final int
		RULE_programa = 0, RULE_corpo = 1, RULE_declaracoes = 2, RULE_criar_grafo = 3, 
		RULE_criar_dgrafo = 4, RULE_grafo = 5, RULE_dgrafo = 6, RULE_criar_vertices = 7, 
		RULE_vertices = 8, RULE_criar_dados = 9, RULE_comandos = 10, RULE_adicionar = 11, 
		RULE_aresta = 12, RULE_daresta = 13, RULE_desenhar = 14, RULE_limpar = 15, 
		RULE_plotar = 16, RULE_salvar = 17, RULE_para = 18, RULE_value = 19, RULE_se = 20, 
		RULE_senao = 21, RULE_comparacao_key = 22, RULE_key = 23, RULE_exibir = 24, 
		RULE_remover = 25, RULE_expressao = 26;
	public static final String[] ruleNames = {
		"programa", "corpo", "declaracoes", "criar_grafo", "criar_dgrafo", "grafo", 
		"dgrafo", "criar_vertices", "vertices", "criar_dados", "comandos", "adicionar", 
		"aresta", "daresta", "desenhar", "limpar", "plotar", "salvar", "para", 
		"value", "se", "senao", "comparacao_key", "key", "exibir", "remover", 
		"expressao"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'inicio-lmg'", "'fim-lmg'", "'criar grafo'", "'criar grafo direcional'", 
		"','", "'criar vertices'", "':'", "'['", "']'", "'criar dados'", "'='", 
		"'adicionar vertices'", "'ao grafo'", "'adicionar vertice'", "'adicionar aresta'", 
		"'ao dgrafo'", "'adicionar dados'", "'ao vertice'", "'do grafo'", "'adicionar dado'", 
		"'a aresta'", "'--'", "'->'", "'desenhar grafo'", "'na tela'", "'limpar tela'", 
		"'plotar tela'", "'salvar tela em'", "'para cada vertice'", "'no grafo'", 
		"'fim-para'", "'para cada aresta'", "'para cada vizinho'", "'do vertice'", 
		"'se aresta'", "'possui'", "'fim-se'", "'se'", "'senao:'", "'=='", "'!='", 
		"'>='", "'<='", "'<'", "'>'", "'valor de'", "'no vertice'", "'na aresta'", 
		"'exibir grafo'", "'exibir grafo direcional'", "'exibir vertices do grafo'", 
		"'exibir vertice'", "'onde ('", "')'", "'exibir arestas do grafo'", "'exibir aresta'", 
		"'exibir vizinhos do vertice'", "'remover vertice'", "'remover arestas do grafo'", 
		"'remover aresta'", "'remover arestas'", "'remover dados da aresta'", 
		"'remover dados'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "IDENT", "CADEIA", "NUM", "CaracteresIgnorados", 
		"Comentarios"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinguagemLMG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinguagemLMGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__0);
			setState(55);
			corpo();
			setState(56);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_corpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			declaracoes();
			setState(59);
			comandos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public Criar_grafoContext criar_grafo() {
			return getRuleContext(Criar_grafoContext.class,0);
		}
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public Criar_dgrafoContext criar_dgrafo() {
			return getRuleContext(Criar_dgrafoContext.class,0);
		}
		public Criar_verticesContext criar_vertices() {
			return getRuleContext(Criar_verticesContext.class,0);
		}
		public Criar_dadosContext criar_dados() {
			return getRuleContext(Criar_dadosContext.class,0);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracoes);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				criar_grafo();
				setState(62);
				declaracoes();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				criar_dgrafo();
				setState(65);
				declaracoes();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				criar_vertices();
				setState(68);
				declaracoes();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				criar_dados();
				setState(71);
				declaracoes();
				}
				break;
			case T__1:
			case T__11:
			case T__13:
			case T__14:
			case T__16:
			case T__19:
			case T__23:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__31:
			case T__32:
			case T__34:
			case T__37:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case T__54:
			case T__55:
			case T__56:
			case T__57:
			case T__58:
			case T__59:
			case T__60:
			case T__61:
			case T__62:
				enterOuterAlt(_localctx, 5);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Criar_grafoContext extends ParserRuleContext {
		public GrafoContext grafo() {
			return getRuleContext(GrafoContext.class,0);
		}
		public Criar_grafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criar_grafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterCriar_grafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitCriar_grafo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitCriar_grafo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Criar_grafoContext criar_grafo() throws RecognitionException {
		Criar_grafoContext _localctx = new Criar_grafoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_criar_grafo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__2);
			setState(77);
			grafo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Criar_dgrafoContext extends ParserRuleContext {
		public DgrafoContext dgrafo() {
			return getRuleContext(DgrafoContext.class,0);
		}
		public Criar_dgrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criar_dgrafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterCriar_dgrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitCriar_dgrafo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitCriar_dgrafo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Criar_dgrafoContext criar_dgrafo() throws RecognitionException {
		Criar_dgrafoContext _localctx = new Criar_dgrafoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_criar_dgrafo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__3);
			setState(80);
			dgrafo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrafoContext extends ParserRuleContext {
		public Token grafo1;
		public Token IDENT;
		public List<Token> outrosGrafos = new ArrayList<Token>();
		public List<TerminalNode> IDENT() { return getTokens(LinguagemLMGParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LinguagemLMGParser.IDENT, i);
		}
		public GrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterGrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitGrafo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitGrafo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrafoContext grafo() throws RecognitionException {
		GrafoContext _localctx = new GrafoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_grafo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((GrafoContext)_localctx).grafo1 = match(IDENT);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(83);
				match(T__4);
				setState(84);
				((GrafoContext)_localctx).IDENT = match(IDENT);
				((GrafoContext)_localctx).outrosGrafos.add(((GrafoContext)_localctx).IDENT);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DgrafoContext extends ParserRuleContext {
		public Token dgrafo1;
		public Token IDENT;
		public List<Token> outrosDGrafos = new ArrayList<Token>();
		public List<TerminalNode> IDENT() { return getTokens(LinguagemLMGParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LinguagemLMGParser.IDENT, i);
		}
		public DgrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dgrafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterDgrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitDgrafo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitDgrafo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DgrafoContext dgrafo() throws RecognitionException {
		DgrafoContext _localctx = new DgrafoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dgrafo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((DgrafoContext)_localctx).dgrafo1 = match(IDENT);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(91);
				match(T__4);
				setState(92);
				((DgrafoContext)_localctx).IDENT = match(IDENT);
				((DgrafoContext)_localctx).outrosDGrafos.add(((DgrafoContext)_localctx).IDENT);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Criar_verticesContext extends ParserRuleContext {
		public VerticesContext vertices() {
			return getRuleContext(VerticesContext.class,0);
		}
		public Criar_verticesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criar_vertices; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterCriar_vertices(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitCriar_vertices(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitCriar_vertices(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Criar_verticesContext criar_vertices() throws RecognitionException {
		Criar_verticesContext _localctx = new Criar_verticesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_criar_vertices);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__5);
			setState(99);
			vertices();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerticesContext extends ParserRuleContext {
		public Token nome;
		public Token vertice1;
		public Token IDENT;
		public List<Token> outrosVertices = new ArrayList<Token>();
		public List<TerminalNode> IDENT() { return getTokens(LinguagemLMGParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LinguagemLMGParser.IDENT, i);
		}
		public VerticesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vertices; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterVertices(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitVertices(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitVertices(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerticesContext vertices() throws RecognitionException {
		VerticesContext _localctx = new VerticesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vertices);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((VerticesContext)_localctx).nome = match(IDENT);
			setState(102);
			match(T__6);
			setState(103);
			match(T__7);
			setState(104);
			((VerticesContext)_localctx).vertice1 = match(IDENT);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(105);
				match(T__4);
				setState(106);
				((VerticesContext)_localctx).IDENT = match(IDENT);
				((VerticesContext)_localctx).outrosVertices.add(((VerticesContext)_localctx).IDENT);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Criar_dadosContext extends ParserRuleContext {
		public Token nome;
		public Token dado1;
		public ValueContext valor1;
		public Token IDENT;
		public List<Token> outrosDados = new ArrayList<Token>();
		public ValueContext value;
		public List<ValueContext> outrosValores = new ArrayList<ValueContext>();
		public List<TerminalNode> IDENT() { return getTokens(LinguagemLMGParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LinguagemLMGParser.IDENT, i);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public Criar_dadosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criar_dados; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterCriar_dados(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitCriar_dados(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitCriar_dados(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Criar_dadosContext criar_dados() throws RecognitionException {
		Criar_dadosContext _localctx = new Criar_dadosContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_criar_dados);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__9);
			setState(115);
			((Criar_dadosContext)_localctx).nome = match(IDENT);
			setState(116);
			match(T__6);
			setState(117);
			((Criar_dadosContext)_localctx).dado1 = match(IDENT);
			setState(118);
			match(T__10);
			setState(119);
			((Criar_dadosContext)_localctx).valor1 = value();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(120);
				match(T__4);
				setState(121);
				((Criar_dadosContext)_localctx).IDENT = match(IDENT);
				((Criar_dadosContext)_localctx).outrosDados.add(((Criar_dadosContext)_localctx).IDENT);
				setState(122);
				match(T__10);
				setState(123);
				((Criar_dadosContext)_localctx).value = value();
				((Criar_dadosContext)_localctx).outrosValores.add(((Criar_dadosContext)_localctx).value);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public AdicionarContext adicionar() {
			return getRuleContext(AdicionarContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public DesenharContext desenhar() {
			return getRuleContext(DesenharContext.class,0);
		}
		public LimparContext limpar() {
			return getRuleContext(LimparContext.class,0);
		}
		public PlotarContext plotar() {
			return getRuleContext(PlotarContext.class,0);
		}
		public SalvarContext salvar() {
			return getRuleContext(SalvarContext.class,0);
		}
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public SeContext se() {
			return getRuleContext(SeContext.class,0);
		}
		public ExibirContext exibir() {
			return getRuleContext(ExibirContext.class,0);
		}
		public RemoverContext remover() {
			return getRuleContext(RemoverContext.class,0);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemLMGListener ) ((LinguagemLMGListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemLMGVisitor ) return ((LinguagemLMGVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}
